Add and update README.md, index.html and stylesheet.css to reflect current project

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                               <li><a href="#" class="subflex-item artag">bootstrap</a></li>
                               <li><img src="image/css-divider.png" alt="divider image" class="subflex-item"></li>
                               <li><a href="#" class="subflex-item artag">Ruby</a></li>
-                              </ul>
+                          </ul>
                           <ul class="seep"><li><a href="#" class="subflex-item seeproject">See Project</a></li></ul>
                       </div>
                       
@@ -236,7 +236,7 @@
           <section class="cc-sect">
             <form action="https://formspree.io/f/mgeqvqbb" method="post" class="myform" id="someform">
                 <input type="text" maxlength="30" name="Name" required placeholder="Full Name">
-                <input type="email" name="Email" required placeholder="Email" id="email">
+                <input type="email" name="Email" required placeholder="Email" id="email" class="inp-email">
                 <textarea maxlength="500" name="message" required placeholder="Enter You Message Here"></textarea>
                 <button type="submit" class="mmb">See Project</button>
                 <button type="submit" name="send" class="dsk">Send</button>
@@ -247,7 +247,7 @@
           </article>
   
       </main>
-      <p class="click-me">Please click me</p>
+      <p class="click-me">Please see am moving</p>
 
       <footer class="foota">
         <nav class="social">
